Fix SearchInput's dropdown covering up the error text

--- a/components/SearchInput/SearchInput.module.scss
+++ b/components/SearchInput/SearchInput.module.scss
@@ -11,7 +11,6 @@
   padding: .5rem;
   overflow-y: auto;
   border-top: none;
-  position: absolute;
   z-index: 10000;
 
   @include scrollbars.brand-scrollbar();
